# gul

./: AUTHORS  CMakeLists.txt  CTestConfig.cmake  ChangeLog  INSTALL  README
cmake/: AStyle.ctest.in
doc/: CodingConventions.txt  Doxyfile  gul.dox
include/: Array.h  Assert.h  ClassCreatorFunctor.h  ClassFactory.h  ClassFactoryBase.h  Container.h  ContainerConstants.h  FFMPEG.h  List.h  Map.h  Math.h  MathConstants.h  Misc.h  NonCopyable.h  NonCreatable.h  RTTI.h  Set.h  SettingsManager.h  Stack.h  String.h  Traits.h  XMLLoader.h  XMLMacros.h  XMLManager.h  XMLSaver.h  XMLSerializable.h  XMLSerializer.h  memleak.h  memleak_template_end.h
include/algorithms/: Algorithm.h
include/base/: Assert.h  ClassFactory.h  ClassFactoryBase.h  Cloneable.h  Constants.h  Dir.h  File.h  Log.h  Misc.h  NonCopyable.h  NonCreatable.h  NullObject.h  RTTI.h  SharedResource.h  String.h  Timing.h  Traits.h
include/containers/: Array.h  ArrayBasic.h  ContainerConstants.h  List.h  ListBasic.h  Map.h  MapBasic.h  Set.h  SetBasic.h  Stack.h  StackBasic.h
include/context/: ALContext.h  ALSource.h  CLContext.h  CLProgram.h  CLWorkgroup.h  ContextAL.h  ContextErrorHandling.h  GLContext.h  GLProgram.h
include/image/: BMP_IO.h  Image.h  ImageFileHandler.h  ImageIO.h  ImageIO_JPEG.h  ImageIO_PNG.h  ImageIO_PPM.h  ImageIO_TIFF.h  JPEG_IO.h  PNG_IO.h  PPM_IO.h  RGBA.h  TIFF_IO.h
include/math/: Math.h  MathConstants.h  Matrix.h
include/media/: AudioFrame.h  MediaConverter.h  MediaFrame.h  MediaReader.h  MediaWriter.h  VideoFrame.h
include/memory/: OnDemandMemory.h
include/persistance/: SettingsManager.h  XMLAttribute.h  XMLDocument.h  XMLMacros.h  XMLManager.h  XMLNode.h  XMLSerializable.h
include/video/: FFMPEG.h  VideoConverter.h  VideoFrame.h  VideoFrameManipulator.h  VideoLoader.h  VideoSaver.h  VideoSettings.h
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt
src/algorithms/analyzer/: AnalyzerImageEquality.cpp  CMakeLists.txt
src/algorithms/converter/: CMakeLists.txt  ConverterImageToBW.cpp  ConverterImageToGrayscale.cpp  ConverterImageToSBS.cpp
src/algorithms/filter/: CMakeLists.txt  FilterImageToBW.cpp  FilterImageToGrayscale.cpp
src/base/: Assert.cpp  CMakeLists.txt  ClassCreatorFunctor.cpp  ClassFactory.cpp  ClassFactoryBase.cpp  Dir.cpp  File.cpp  Log.cpp  RTTI.cpp  SharedResource.cpp  String.cpp  Timing.cpp  Traits.cpp
src/containers/: Array.hpp  CMakeLists.txt  ContainerConstants.cpp  List.hpp  Map.cpp  Map.hpp  Set.hpp  SetBasic.cpp  Stack.hpp
src/context/: ALContext.cpp  ALSource.cpp  CLContext.cpp  CLProgram.cpp  CMakeLists.txt  ContextAL.cpp  ContextCL.cpp  ContextErrorHandling.cpp  GLContext.cpp  GLProgram.cpp
src/image/: BMP_IO.cpp  CMakeLists.txt  Image.cpp  ImageFileHandler.cpp  ImageIO.cpp  ImageIO_JPEG.cpp  ImageIO_PNG.cpp  ImageIO_PPM.cpp  ImageIO_TIFF.cpp  JPEG_IO.cpp  PNG_IO.cpp  PPM_IO.cpp  RGBA.cpp  TIFF_IO.cpp
src/math/: CMakeLists.txt  Math.cpp  Math.hpp  MathConstants.cpp
src/media/: AudioFrame.cpp  CMakeLists.txt  MediaConverter.cpp  MediaFrame.cpp  MediaReader.cpp  MediaWriter.cpp  VideoFrame.cpp
src/media/manipulator/: VFM2DToSBSDelay.cpp
src/memory/: CMakeLists.txt  WeakPtr.cpp
src/persistance/: CMakeLists.txt  SettingsManager.cpp  XMLAttribute.cpp  XMLDocument.cpp  XMLLoader.cpp  XMLLoader.hpp  XMLNode.cpp  XMLSaver.cpp  XMLSaver.hpp  XMLSerializable.cpp
src/video/: CMakeLists.txt  FFMPEG.cpp  VideoConverter.cpp  VideoFrame.cpp  VideoLoader.cpp  VideoSaver.cpp
src/video/manipulator/: VFM2DToSBSDelay.cpp
test/: CMakeLists.txt
test/algorithms/: CMakeLists.txt
test/algorithms/analyzer/: CMakeLists.txt  TestImageEquality.cpp  Utils.cpp  Utils.h
test/algorithms/converter/: CMakeLists.txt  TestImageToBW.cpp  TestImageToGrayscale.cpp  TestImageToSBS.cpp  Utils.cpp  Utils.h
test/algorithms/filter/: CMakeLists.txt  TestImageToBW.cpp  TestImageToGrayscale.cpp  Utils.cpp  Utils.h
test/algorithms/generator/: CMakeLists.txt
test/base/: CMakeLists.txt  TestAssert.cpp  TestClassFactory.cpp  TestDir.cpp  TestFile.cpp  TestMain.cpp  TestRTTI.cpp  TestString.cpp  TestTraits.cpp
test/containers/: CMakeLists.txt  TestArray.cpp  TestArrayBasic.cpp  TestList.cpp  TestListBasic.cpp  TestMain.cpp  TestMap.cpp  TestMapBasic.cpp  TestSet.cpp  TestSetBasic.cpp  TestStack.cpp  TestStackBasic.cpp
test/context/: CMakeLists.txt  TestALContext.cpp  TestCLContext.cpp  TestCLProgram.cpp  TestContextAL.cpp
test/data/: CMakeLists.txt  CTestData.h.in  UtilsImage.cpp  UtilsImage.h  colorImageSample.tiff  colorImageSample.xcf  colorImageSample_ascii.pbm  colorImageSample_ascii.pgm  colorImageSample_ascii.ppm  colorImageSample_bin.pbm  colorImageSample_bin.pgm  colorImageSample_bin.ppm  colorImageSample_deflate.tiff  colorImageSample_jpeg.tiff  lena.tiff  lena_deflate.tiff  lena_jpeg.tiff
test/data/image/: lena.jpe  lena.tif  lena.tiff  lena.xcf  lena_ascii.pbm  lena_ascii.pgm  lena_bin.pbm  lena_bin.pgm  lena_bin.ppm  lena_deflate.tiff  lena_jpeg.tiff  lena_lzw.tiff  lena_packbits.tiff
test/data/video/: firefly.avi  firefly.mkv  firefly.mov  firefly.ogv
test/image/: CMakeLists.txt  TestImage.cpp  TestImageFileHandler.cpp  TestImageIO_JPEG.cpp  TestImageIO_PNG.cpp  TestImageIO_PPM.cpp  TestImageIO_TIFF.cpp  TestJPEG_IO.cpp  TestPNG_IO.cpp  TestPPM_IO.cpp  TestTIFF_IO.cpp  Utils.cpp  Utils.h
test/math/: CMakeLists.txt  TestMath.cpp  TestMatrix.cpp
test/media/: CMakeLists.txt  TestAudioFrame.cpp  TestMediaConverter.cpp  TestMediaReader.cpp  TestMediaWriter.cpp
test/memory/: CMakeLists.txt
test/persistance/: CMakeLists.txt  TestMain.cpp  TestSettingsManager.cpp  TestXMLLoader.cpp  TestXMLManager.cpp  TestXMLSaver.cpp
test/utils/: CMakeLists.txt  UtilsCDash.cpp  UtilsCDash.h  UtilsImage.cpp  UtilsImage.h
test/video/: CMakeLists.txt  TestFFMPEG.cpp  TestVideoConverter.cpp  TestVideoLoader.cpp  TestVideoSaver.cpp
test/video/data/: coldCase.avi
tools/: .astylerc  CTestMain.h  astyle.conf  headerLGPL.txt  qtCreatorCodeStyle.xml
tools/CMake/: AStyle.cmake  CTestAssert.h  CTestCDash.cpp  CTestCDash.h  CTestData.h.in  CTestMacros.cmake  (+13 more)
(+69 files in other folders)
