include_directories("${CMAKE_CURRENT_BINARY_DIR}/data")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/data")
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/utils")

add_subdirectory(algorithms)
add_subdirectory(base)
add_subdirectory(containers)
add_subdirectory(context)
add_subdirectory(data)
add_subdirectory(image)
add_subdirectory(math)
add_subdirectory(media)
add_subdirectory(memory)
add_subdirectory(persistance)
