gul_add_test(Base Assert Assertion)

gul_add_test(Base String Construction)
gul_add_test(Base String Concatenation)
gul_add_test(Base String PlaceHolder)
gul_add_test(Base String ReplaceString)
gul_add_test(Base String ReplaceRange)
gul_add_test(Base String CharAt)
gul_add_test(Base String Find)

gul_add_test(Base ClassFactory CreateClass)
gul_add_test(Base ClassFactory CreateTemplateClass)
gul_add_test(Base ClassFactory CreateAssertion)
gul_add_test(Base ClassFactory CreateSuperClass)

gul_add_test(Base RTTI ClassName)

gul_create_test()
target_link_libraries(TestBase base)



