gul_add_test(Containers Array SizeAndIsEmpty)
gul_add_test(Containers Array Add)
gul_add_test(Containers Array AddIndex)
gul_add_test(Containers Array AddIndexAssertion)
gul_add_test(Containers Array RemoveIndex)
gul_add_test(Containers Array RemoveIndexAssertion)
gul_add_test(Containers Array RemoveElement)
gul_add_test(Containers Array RemoveElementAssertion)
gul_add_test(Containers Array Clear)
gul_add_test(Containers Array IndexOf)
gul_add_test(Containers Array Contains)
gul_add_test(Containers Array CopyConstructor)
gul_add_test(Containers Array Assignment)
gul_add_test(Containers Array SaveAndLoadXML)

gul_add_test(Containers List SizeAndIsEmpty)
gul_add_test(Containers List Add)
gul_add_test(Containers List AddIndex)
gul_add_test(Containers List AddIndexAssertion)
gul_add_test(Containers List RemoveIndex)
gul_add_test(Containers List RemoveIndexAssertion)
gul_add_test(Containers List RemoveElement)
gul_add_test(Containers List RemoveElementAssertion)
gul_add_test(Containers List Clear)
gul_add_test(Containers List IndexOf)
gul_add_test(Containers List Contains)
gul_add_test(Containers List CopyConstructor)
gul_add_test(Containers List Assignment)

gul_add_test(Containers Map SizeAndIsEmpty)
gul_add_test(Containers Map Add)
gul_add_test(Containers Map Remove)
gul_add_test(Containers Map RemoveAssertion)
gul_add_test(Containers Map Get)
gul_add_test(Containers Map GetAssertion)
gul_add_test(Containers Map Clear)
gul_add_test(Containers Map Contains)
gul_add_test(Containers Map GetKeys)
gul_add_test(Containers Map GetValues)
gul_add_test(Containers Map CopyConstructor)
gul_add_test(Containers Map Assignment)

gul_add_test(Containers Set SizeAndIsEmpty)
gul_add_test(Containers Set Add)
gul_add_test(Containers Set Remove)
gul_add_test(Containers Set RemoveAssertion)
gul_add_test(Containers Set Clear)
gul_add_test(Containers Set Contains)
gul_add_test(Containers Set CopyConstructor)
gul_add_test(Containers Set Assignment)

gul_add_test(Containers Stack SizeAndIsEmpty)
gul_add_test(Containers Stack Top)
gul_add_test(Containers Stack TopAssertion)
gul_add_test(Containers Stack Pop)
gul_add_test(Containers Stack PopAssertion)
gul_add_test(Containers Stack Push)
gul_add_test(Containers Stack Clear)
gul_add_test(Containers Stack CopyConstructor)
gul_add_test(Containers Stack Assignment)
gul_add_test(Containers Stack Contains)

gul_create_test()

target_link_libraries(TestContainers containers base nvwa)
